--- a/JupyterLab/SEIR/SEIR-BaseModel.ipynb
+++ b/JupyterLab/SEIR/SEIR-BaseModel.ipynb
@@ -47,7 +47,9 @@
     "\n",
     "[Epidemic calculator](https://gabgoh.github.io/COVID/index.html?CFR=0.02&D_hospital_lag=5&D_incbation=5.2&D_infectious=2.9&D_recovery_mild=11.1&D_recovery_severe=28.6&I0=1&InterventionAmt=1&InterventionTime=100&P_SEVERE=0.2&R0=2.2&Time_to_death=32&logN=15.761420707019587)\n",
     "\n",
-    "[SEIR Model Wikipedia](https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology)"
+    "[SEIR Model Wikipedia](https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology)\n",
+    "\n",
+    "[The Spatiotemporal Epidemiological Modeler (STEM) Project](https://www.eclipse.org/stem/)"
    ]
   },
   {
